[tool.poetry]
name = "homework-oop"
version = "0.1.0"
description = ""
authors = ["ViktorShadr <v.viktor.shadrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
