[tool.poetry]
name = "homework-oop"
version = "0.1.0"
description = ""
authors = ["ViktorShadr <v.viktor.shadrin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
